Five new pages, updated Jupiter and Saturn, minor edits and corrections

--- a/pages/ceres.html
+++ b/pages/ceres.html
@@ -42,6 +42,7 @@ link: ceres
                 <h2 class="paragraphheader" id="Name">Name</h2>
                 <p class="paragraph">
                     Ceres is named after the goddess of fertility in Roman mythology, as it is the tradition for other planets.
+                    It has a minor planet number of 1, as it was the first discovered and thus the first to receive a number.
                     Franz Xaver von Zach and Johann Elert Bode refered to the planet as Hera and Juno, the Greek and Roman queen of the gods respectively.
                     For a while, this name stuck in Germanic-speaking states, though astronomer Karl Harding discovered another asteroid, now bearing the name Juno, and the name the discoverer Giuseppe Piazzi chose stuck
                 </p>
@@ -61,18 +62,18 @@ link: ceres
                     It has a axial tilt of 4°, meaning little seasonal variations in sunlight by latitude.
                     Still, it casuses the poles to hold more ice, since there is no direct sunlight, similar to the rocky Mercury and <a href="moon.html">Moon</a>.
                 </p>
-                <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
-                <h3 class="paragraphsubheader" id="Size">Size</h3>
-                <p class="paragraph">
-                    Ceres is an oblate spheroid, with an equatorial diameter 8% larger than its polar diameter.
-                    Measurements from the Dawn spacecraft found a mean diameter of 939.4 km.
-                    Out of the dwarf planets recognized by IAU, it is the smallest.
-                </p>
                 <div class="articlediv">
-                    <div class="captionbox right h240">
+                    <div class="captionbox right h180">
                         <img class="articleimage" src="../assets/images/features/occator-crater.jpg" alt="Occator crater">
-                        <p class="caption">Occator crater. The two bright spots in the middle and on the side are Cerealia and Vinalia Faculae. The spots contain salt evaporates.</p>
+                        <p class="caption">Occator crater. The two bright spots are Cerealia (center) and Vinalia (bottom left) Faculae, and contain salt evaporates.</p>
                     </div>
+                    <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
+                    <h3 class="paragraphsubheader" id="Size">Size</h3>
+                    <p class="paragraph">
+                        Ceres is an oblate spheroid, with an equatorial diameter 8% larger than its polar diameter.
+                        Measurements from the Dawn spacecraft found a mean diameter of 939.4 km.
+                        Out of the dwarf planets recognized by IAU, it is the smallest.
+                    </p>
                     <h3 class="paragraphsubheader" id="InternalStructure">Internal structure</h3>
                     <p class="paragraph">
                         The interior of Ceres consists of water ice, hydrated silicate minerals, mostly clay, and some salts like sodium carbonate and hydrated magnesium sulphate.
@@ -81,6 +82,12 @@ link: ceres
                         The two other models suggest a core of either chondrules, or volatiles, and a mantle of either ice and mud, or hydrated silicates (like clay) that is denser than the core.
                         In any of the cases, Ceres has an active geology and briny water exists in the interior, creating cryovolcanic features on the surface, making it the closest object to the Sun to exhibit this process.
                     </p>
+                </div>
+                <div class="articlediv">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/features/ahuna-mons.jpg" alt="Ahuna Mons">
+                        <p class="caption">Ahuna Mons, the tallest cryovolcano and mountain on Ceres. North lies an unnamed crater.</p>
+                    </div>
                     <h3 class="paragraphsubheader" id="ExternalStructure">External structure</h3>
                     <p class="paragraph">
                         Ceres resembles many geologically inactive planetary bodies.
@@ -95,10 +102,6 @@ link: ceres
                         Several other bright spots exist like Haulani Facula and Oxo crater.
                         Oxo is bright because of ice that was brought externally and is in the process of sublimating.
                     </p>
-                    <div class="captionbox right h240">
-                        <img class="articleimage" src="../assets/images/features/ahuna-mons.jpg" alt="Ahuna Mons">
-                        <p class="caption">Ahuna Mons, a cryovolcano and the tallest mountain on Ceres. North of it lies an unnamed crater.</p>
-                    </div>
                     <p class="paragraph">
                         The other notable cryovolcanic feature is Ahuna Mons, the only mountain on Ceres to show such activity.
                         It is the tallest mountain on Ceres at around 4100 m.
