--- a/pages/eris.html
+++ b/pages/eris.html
@@ -48,6 +48,7 @@ link: eris
                     It was chosen, because the discovery of Eris led to a debate over the status of the ninth planet at the time - Pluto.
                     Before that, it was unoficially refered to as Xena, after the title character of the television series Xena: Warrior Princess.
                     The nickname was chosen for its initial letter "X", in reference to "planet X" - the ninth planet that is yet to be discovered.
+                    Eris has a minor planet number of 136199 and had a provisional name 2003 UB313.
                 </p>
                 <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
                 <p class="paragraph">
