--- a/pages/europa.html
+++ b/pages/europa.html
@@ -11,7 +11,7 @@ link: europa
                         <p class="caption">Europa</p>
                     </div>
                     <p class="paragraph">
-                        Europa is the smallest of the four <a href="satellites-of-jupiter.html">Galilean moon</a> and is slightly smaller than <a href="earth.html">Earth</a>'s <a href="moon.html">Moon</a>.
+                        Europa is the smallest of the four <a href="satellites-of-jupiter.html">Galilean moons</a> and is slightly smaller than <a href="earth.html">Earth</a>'s <a href="moon.html">Moon</a>.
                         It was discovered by Galileo Galilei in 1610 and is named after the mother of King Minos of Crete and lover of Zeus from Greek mythology.
                     </p>
                     <p class="paragraph">
@@ -28,7 +28,7 @@ link: europa
                     The story tells that Zeus disguised as a bull in her father's herd, so he can abduct her.
                     When he rode with her all the way to Crete, he made Europa queen of the island.
                     The theme of naming the moons after Zeus's lovers was first suggested by Johannes Kepler and later adopted by Simon Marius.
-                    The names weren't accepted initially until the discovery of the <a href="satellites-of-saturn.html">moons</a> of <a href="saturn.html">Saturn</a>.
+                    The names weren't accepted initially until the discovery of the <a href="satellites-of-saturn.html">moons</a> of Saturn.
                     Before that, the four Galilean moons were refered to as Jupiter I through IV in order from closest to furthest (Europa was Jupiter II).
                 </p>
                 <h2 class="paragraphheader" id="Discovery">Discovery</h2>
