--- a/pages/haumea.html
+++ b/pages/haumea.html
@@ -51,6 +51,7 @@ link: haumea
                     This name was suggested by Brown's team, after dicovering the two moons in Hawai'i.
                     Originally, the right to name Haumea was given to the Ortiz-led team, but their suggestion - the Iberian goddess of the underworld Ataecina - was rejected for not conforming to the naming conventions of the IAU.
                     Such names of underworld deities were accepted only for plutinos, while other TNOs are given mythological names, particularly those of deities of creation.
+                    Haumea has a minor planet number of 136108 and had a provisional name 2003 EL61.
                 </p>
                 <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
                 <p class="paragraph">
