--- a/pages/makemake.html
+++ b/pages/makemake.html
@@ -11,9 +11,10 @@ link: makemake
                         <p class="caption">Makemake and its moon, Hubble Space Telescope</p>
                     </div>
                     <p class="paragraph">
-                        Makemake is a <a href="swarf-planet.html">dwarf planet</a> located in the Kuiper belt.
+                        Makemake is a <a href="dwarf-planet.html">dwarf planet</a> located in the Kuiper belt.
                         It was discovered in 2005 and is named after the Rapa Nui god-creator.
                         The dwarf planet has a reddish color caused by the high amount of nitrogen and hydrocarbons, which react and form tholins.
+                        It also has a high albedo, making it whiter than other dark red TNOs.
                         Signs of geothermal activity were also detected on Makemake.
                         Makemake has one unnamed satellite, nicknamed MK2.
                     </p>
@@ -35,6 +36,7 @@ link: makemake
                 <p class="paragraph">
                     Makemake is named after the god-creator of the Rapa Nui people.
                     The name was chosen because the discovery was made around Easter, similarly to Rapa Nui island (also known as Easter Island).
+                    Makemake has a minor planet number of 136472 and had a provisional name 2005 FY9.
                 </p>
                 <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
                 <p class="paragraph">
@@ -52,36 +54,42 @@ link: makemake
                     Later, during a stellar occultation, the dimensions were refined down to 1430 km
                     It is most likely a round object, earning it the title of a dwarf planet.
                 </p>
-                <h3 class="paragraphsubheader" id="Structure">Structure</h3>
-                <p class="paragraph">
-                    The density of Makemake is 1.67, smaller than those of Pluto, <a href="charon.html">Charon</a>, Eris, and Haumea, placing it on the lower end of the most likeliest dwarf planets (similar to Quaoar).
-                    This suggests a composition of silicate rock in the core and ice in the mantle around a third of the mass.
-                </p>
-                <p class="paragraph">
-                    Makemake has a high geometric albedo of 0.82 and has a reddish color.
-                    The color is typical for many TNOs, rich in methane and nitrogen, which react to form tholins under cosmic and solar radiation.
-                    In fact, methane has been detected on the surface of Makemake, constituting much of the surface.
-                    Nitrogen has also been detected, albeit at a much lower concentration than on Pluto.
-                    This would suggest the depletion of nirogen during its natural history.
-                    Nevertheless, it is in high enough amounts that tholins have formed, giving the reddish color.
-                    Ethylene and smaller amounts of ethylene, acetylene, and propane have also been detected, which have formed in a similar manner as the tholins, this time without nitrogen.
-                </p>
-                <p class="paragraph">
-                    Data from the James Webb Space Telescope shows deuterium to hydrogen ratios that would suggest internal production.
-                    Eris exhibits the same.
-                    This means that Makemake could have a subsurface ocean and is likely geologically active.
-                </p>
-                <p class="paragraph">
-                    Makemake's surface features bright icy plains of methane and nitrogen, similar to Pluto.
-                    Photometry data of the Spitzer and Herschel telescopes have also detected dark spots constituting around 3 to 7% of the surface.
-                    There are two possibilities for thes low albedo spots.
-                    One is that they are dark plains rich in tholins, similar to the maculae on Pluto.
-                    The second possibility is that this drop in albedo could be due to the then unknown satellite transiting over Makemake.
-                </p>
-                <p class="paragraph">
-                    So far, no atmosphere has been detected on Makemake, but it is suggested that, similarly to Pluto, a transient atmosphere of methane and nitrogen builds up when approaching perihelion.
-                    This gas buildup could explain the absence of nitrogen, but the main gas that was noticed to escape from Pluto is methane instead.
-                </p>
+                <div class="articlediv">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/other/makemake-artist-impression.jpg" alt="Makemake artist impression">
+                        <p class="caption">An artist's impression of what Makemake might look like, depicting a uniform, bright and reddish surface.</p>
+                    </div>
+                    <h3 class="paragraphsubheader" id="Structure">Structure</h3>
+                    <p class="paragraph">
+                        The density of Makemake is 1.67, smaller than those of Pluto, <a href="charon.html">Charon</a>, Eris, and Haumea, placing it on the lower end of the most likeliest dwarf planets (similar to Quaoar).
+                        This suggests a composition of silicate rock in the core and ice in the mantle around a third of the mass.
+                    </p>
+                    <p class="paragraph">
+                        Makemake has a high geometric albedo of 0.82 and has a reddish color.
+                        The color is typical for many TNOs, rich in methane and nitrogen, which react to form tholins under cosmic and solar radiation.
+                        In fact, methane has been detected on the surface of Makemake, constituting much of the surface.
+                        Nitrogen has also been detected, albeit at a much lower concentration than on Pluto.
+                        This would suggest the depletion of nirogen during its natural history.
+                        Nevertheless, it is in high enough amounts that tholins have formed, giving the reddish color.
+                        Ethylene and smaller amounts of ethylene, acetylene, and propane have also been detected, which have formed in a similar manner as the tholins, this time without nitrogen.
+                    </p>
+                    <p class="paragraph">
+                        Data from the James Webb Space Telescope shows deuterium to hydrogen ratios that would suggest internal production.
+                        Eris exhibits the same.
+                        This means that Makemake could have a subsurface ocean and is likely geologically active.
+                    </p>
+                    <p class="paragraph">
+                        Makemake's surface features bright icy plains of methane and nitrogen, similar to Pluto.
+                        Photometry data of the Spitzer and Herschel telescopes have also detected dark spots constituting around 3 to 7% of the surface.
+                        There are two possibilities for the low albedo spots.
+                        One is that they are dark plains rich in tholins, similar to the maculae on Pluto.
+                        The second possibility is that this drop in albedo could be due to the then unknown satellite transiting over Makemake.
+                    </p>
+                    <p class="paragraph">
+                        So far, no atmosphere has been detected on Makemake, but it is suggested that, similarly to Pluto, a transient atmosphere of methane and nitrogen builds up when approaching perihelion.
+                        This gas buildup could explain the absence of nitrogen, but the main gas that was noticed to escape from Pluto is methane instead.
+                    </p>
+                </div>
                 <h2 class="paragraphsubheader" id="Satellite">Satellite</h2>
                 <p class="paragraph">
                     Makemake has one known satellite - S/2015 (136472) 1.
