--- a/pages/neptune.html
+++ b/pages/neptune.html
@@ -109,9 +109,10 @@ link: neptune
                     </div>
                     <h3 class="paragraphsubheader" id="Rings">Rings</h3>
                     <p class="paragraph">
-                        Neptune has five rings. 
-                        They are faint and composed of dust, similar to those of Jupiter.
+                        Neptune has five rings discovered during the Voyager mission. 
+                        They are faint and composed of dust and some ice and organic compounds, more similar to those of Jupiter.
                         The five rings bear the names of scientist that played a role in the discovery and observation of Neptune - Galle, Le Verrier, Lassell, Arago, and Adams.
+                        Within the Adams ring are several arcs with greater particle concentration.
                     <h2 class="paragraphheader" id="Climate">Climate</h2>
                     <p class="paragraph">
                         Neptune weather is more intense than that on Uranus, due to higher internal heating.
