--- a/pages/pluto.html
+++ b/pages/pluto.html
@@ -55,6 +55,9 @@ link: pluto
                     The name was officially chosen among a thousand suggestions and was officially adopted on May 1, 1930.
                     The name stuck in part because the first two letters, PL, are the initials of Percival Lowell, who initiated the search for Pluto.
                 </p>
+                <p class="paragraph">
+                    After its reclassification, Pluto received a minor planet number 134340.
+                </p>
                 <div class="articlediv">
                     <div class="captionbox right h240">
                         <img class="articleimage" src="../assets/images/other/pluto-charon-system.gif" alt="Pluto-Charon system">
