--- a/pages/satellites-of-saturn.html
+++ b/pages/satellites-of-saturn.html
@@ -43,10 +43,6 @@ link: satellites-of-saturn
                     Saturn's moons can be generally divided into regular and irregular moons, depending on their orbits.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right h180">
-                        <img class="articleimage" src="../assets/images/natural-satellites/hyperion.jpg" alt="Hyperion">
-                        <p class="caption">Hyperion, the biggest irregularly-shaped Saturnian moon</p>
-                    </div>
                     <h3 class="paragraphheader" id="SmallRegularMoons">Small regular moons</h3>
                     <p class="paragraph">
                         Apart from the seven major moons, there are 17 other regular satellites of Saturn - their orbits are nearly circular and have low inclinations.
@@ -58,6 +54,42 @@ link: satellites-of-saturn
                         The last one is Hyperion, outside the orbit of Titan.
                         It is the largest of the non-round moons and is notable for its chaotic orbit and rotation and porous structure.
                     </p>
+                    <div class="imgwrapper">
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/hyperion.jpg" alt="Hyperion">
+                        </div>
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/janus.jpg" alt="Janus">
+                        </div>
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/epimetheus.jpg" alt="Epimetheus">
+                        </div>
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/prometheus.jpg" alt="Prometheus">
+                        </div>
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/pandora.jpg" alt="Pandora">
+                        </div>
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/helene.jpg" alt="Helene">
+                        </div>
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/atlas.png" alt="Atlas">
+                        </div>
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/pan.jpg" alt="Pan">
+                        </div>
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/telesto.jpg" alt="Teleston">
+                        </div>
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/calypso.jpg" alt="Calypso">
+                        </div>
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/daphnis.jpg" alt="Daphnis">
+                        </div>
+                        <p class="caption">Largest small regular satellites in order of size: Hyperion, Janus, Epimetheus, Prometheus, Pandora, Helene, Atlas, Pan, Telesto, Calypso, Daphnis</p>
+                    </div>
                 </div>
                 <div class="articlediv">
                     <h3 class="paragraphheader" id="InnerMajorMoons">Inner major moons</h3>
@@ -139,8 +171,8 @@ link: satellites-of-saturn
                     Their semi-major axes range between 11 and 19 million km.
                     Their inclinations are greater than those of the Gallic group - between 43° and 51°, and their eccentricities are between 0.08 and 0.39. 
                     Siarnaq is the biggest Inuit group member.
-                    Other named members are Paaliq, Kiviuq, Ijiraq, and Tarqeq.
-                    Based on the proximity to Saturn, there are three subgroups - Kiviuq (20 members), Paaliq (sole member), and Siarnaq (15 members). 
+                    Other named members are Paaliaq, Kiviuq, Ijiraq, and Tarqeq.
+                    Based on the proximity to Saturn, there are three subgroups - Kiviuq (20 members), Paaliaq (sole member), and Siarnaq (15 members). 
                 </p>
                 <div class="articlediv">
                     <div class="captionbox right h180">
