--- a/pages/star.html
+++ b/pages/star.html
@@ -24,7 +24,7 @@ link: star
                 <h2 class="paragraphheader" id="Observation">Observation</h2>
                 <p class="paragraph">
                     Observation of the stars was done by people since prehistoric time.
-                    Early civilizations simplified regions of the night sky into constellations, which were used for navigation and tracking time, in particular the change of seasons.
+                    Early civilizations simplified regions of the night sky into <a href="constellation.html">constellations</a>, which were used for navigation and tracking time, in particular the change of seasons.
                     Stars also played a role in religious rituals and were part of different mythologies.
                     Early civilizations like ancient Egypt and Babylon were some of the first to create star charts and star catalogues to help document the stars.
                     Ancient Greece and China influenced their respective spheres of influence with their historical records and names of stars, constellations and the <a href="planet.html">planets</a>
