--- a/pages/uranus.html
+++ b/pages/uranus.html
@@ -100,8 +100,9 @@ link: uranus
                     </p>
                     <h3 class="paragraphsubheader" id="Rings">Rings</h3>
                     <p class="paragraph">
-                        Uranus, like other giants, has a low-albedo ring system.
-                        They are separated into three groups.
+                        Uranus, like other giants, has a ring system.
+                        The composition of these rings is predominantly dark, icy particles and organic material.
+                        There are 13 known rings, which are separated into three groups.
                         The main rings are nine - 6, 5, 4, α, β, η, γ, δ, and ε.
                         They are narrow and composed of tiny particle and dust.
                         Two other rings - ζ and λ are known as dusty rings.
