--- a/pages/vesta.html
+++ b/pages/vesta.html
@@ -38,6 +38,7 @@ link: vesta
                 <h2 class="paragraphheader" id="Name">Name</h2>
                 <p class="paragraph">
                     Vesta is named after the Roman goddess of the home and family.
+                    It has a minor planet number of 4.
                     Since Olbers had already discovered Pallas, the naming rights were given to German mathematician Carl Friedrich Gauss, who took part in the search for Ceres and Vesta.
                 </p>
                 <p class="paragraph">
